<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AppProvaAndroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Inserisci un messaggio</string>
    <string name="button_send">Send</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="bottone_marker">Marker</string>
    <string name="bottone_traccia">Traccia</string>
    <string name="immagine_non_presente">Immagine non presente</string>
    <string name="aiuto_sito">Aiuto (Sito web)</string>
    <string name="tutorial">Tutorial</string>
    <string name="offline">Offline</string>
    <string name="satellite">Satellite</string>
    <string name="strade">Strade</string>
    <string name="sfondo_mappa">Sfondo mappa</string>
    <string name="unita_misura">Unità di misura</string>
    <string name="miglia">mi</string>
    <string name="kilometri">km</string>
    <string name="tipo_bussola">Tipo bussola</string>
    <string name="vera">Vera</string>
    <string name="magn">Magn</string>
    <string name="effetti_sonori">Effetti sonori</string>
    <string name="sbloccate_modalita_pro">Sbloccate modalità\nPRO</string>
    <string name="ripristina_acquisti">Ripristina acquisti</string>
    <string name="mappe_scaricate">Mappe scaricate</string>
    <string name="reset">Reset</string>
    <string name="termini_uso">Termini di uso per applicazione Terra Map</string>
    <string name="info_setting">Terra Map 3.4.3 &#8211; Copyright &#169; 2013&#8211;2014\nGEC di Giorgio Ghiggini.\nAll rights reserved.\nUse Route&#8211;Me map library &#169; 2008&#8211;2010\nRoute&#8211;Me Contributors</string>
    <string name="settaggi">Settaggi</string>
    <string name="titolo_pro">Attualmente potete avere 3 markers, 3 tracce, 3 itinerari e potete memorizzare 3 mappe TERRA.</string>
    <string name="descrizione_pro">Sbloccate la modalità PRO e ottenete per sempre:\n\n- Un numero illimitato di Markers, Tracce e Itinerari.\n\n- utilizzo illimitato delle mappe TERRA per le vostre attività outdoor.</string>
    <string name="acquista_pro">Acquista 9,99 €</string>
    <string name="coordinate">Coordinate</string>
    <string name="latitudine">Latitudine</string>
    <string name="longitudine">Longitudine</string>
    <string name="foto">Foto</string>
    <string name="inserire_foto">Inserire una foto</string>
    <string name="nome_del_marker">Nome del marker</string>
    <string name="descrizione_del_marker">Descrizione del marker</string>
    <string name="disegno_del_marker">Disegno del marker</string>
    <string name="vostra_posizione">Una vostra posizione</string>
    <string name="tocca_zona">Tocca la zona che vuoi scaricare</string>
    <string name="lat_sel">Latitudine sel.</string>
    <string name="long_sel">Longitudine sel.</string>
    <string name="data">Data</string>
    <string name="testo1">Testo 1</string>
    <string name="nome_marker_default">Nome marker default</string>
    <string name="nascondi">Nascondi</string>
    <string name="durata">Durata</string>
    <string name="distanza_tot">Distanza totale</string>
    <string name="tempo_totale">Tempo totale</string>
    <string name="velocita">Velocità</string>
    <string name="media">Media</string>
    <string name="massima">Massima</string>
    <string name="altitudine">Altitudine</string>
    <string name="minima">Minima</string>
    <string name="nome_traccia">Nome della traccia</string>
    <string name="nome_traccia_default">Nome della traccia default</string>
    <string name="descrizione_traccia">Descrizione della traccia</string>
    <string name="tua_traccia">La tua traccia</string>
    <string name="disegno_traccia">Disegno della traccia</string>
    <string name="data_ora_inizio">Data e ora di inizio</string>
    <string name="andatura_km">Andatura al km</string>
    <string name="tempo">Tempo</string>
    <string name="tempo_tot">Tempo totale</string>
    <string name="in_movimento">In movimento</string>
    <string name="in_salita">In salita</string>
    <string name="in_discesa">In discesa</string>
    <string name="distanza">Distanza</string>
    <string name="attuale">Attuale</string>
    <string name="ultima">Ultima</string>
    <string name="migliore">Migliore</string>
    <string name="profilo_vel">Profilo della velocità</string>
    <string name="dislivello">Dislivello</string>
    <string name="dislivello_cumulativo">Dislivello cumulativo</string>
    <string name="profilo_altimetrico">Profilo altimetrico</string>
    <string name="download_in_corso">Download</string>
    <color name="green">#99CC00</color>
    <color name="light_red">#FF4444</color>
    <color name="white">#FFFFFF</color>
    <color name="grigio_bottoni">#BCBCBC</color>
    <color name="grigio_bottoni_trasparenza">#80BCBCBC</color>
    <color name="grigio_bottoni_trasparenza_2">#B3666666</color>
    <color name="blu_bottoni">#0080ff</color>
    <color name="celeste_chiaro">#73c9ff</color>
    <color name="celeste_scuro">#5ea8d7</color>
    <color name="celeste_scuro_trasparenza">#cc5ea8d7</color>
    <color name="rosa_chiaro">#ffbbf9</color>
    <color name="rosa_scuro">#e8a6e3</color>
    <color name="nero_trasparente">#B3000000</color>
    <color name="grigio_settaggi">#e8e8e8</color>
    <color name="grigio_info_settaggi">#e2e2e2</color>
    <color name="celeste_coordinate">#d4e5fd</color>
    <color name="celeste_info_coordinate">#c5deff</color>
    <color name="blu_scritte_coordinate">#000080</color>
    <color name="rosa_foto">#fdd0fd</color>
    <color name="rosa_info_foto">#ffbfff</color>
    <color name="grigio_settaggi_marker">#999999</color>
    <color name="verde_velocita">#cbf8de</color>
    <color name="verde_info_velocita">#b9f8d3</color>
    <color name="verde_scritte_velocita">#008000</color>
    <color name="rosso_altitudine">#fdd0d1</color>
    <color name="rosso_info_altitudine">#ffc0c1</color>
    <color name="rosso_scritte_altitudine">#800000</color>
</resources>
