<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verde_info_velocita">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageButton
            android:id="@+id/bottone_back"
            android:src="@drawable/left_arrow"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/immagine_non_presente"
            android:background="@android:color/transparent" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/velocita"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:paddingTop="16dp"
            android:paddingLeft="16dp"
            android:paddingBottom="5dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:background="@color/verde_velocita"
        android:gravity="center"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:baselineAligned="false"
            android:gravity="center"
            android:paddingTop="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/media"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:textColor="@color/verde_scritte_velocita"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="- - -"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:baselineAligned="false"
            android:gravity="center"
            android:paddingTop="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/massima"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:textColor="@color/verde_scritte_velocita"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="- - -"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/andatura_km"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:paddingTop="16dp"
            android:paddingLeft="16dp"
            android:paddingBottom="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:background="@color/verde_velocita"
        android:gravity="center"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:baselineAligned="false"
            android:gravity="center"
            android:paddingTop="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attuale"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:textColor="@color/verde_scritte_velocita"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="- - -"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/migliore"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:textColor="@color/verde_scritte_velocita"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="- - -"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:baselineAligned="false"
            android:gravity="center"
            android:paddingTop="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ultima"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:textColor="@color/verde_scritte_velocita"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="- - -"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/media"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:textColor="@color/verde_scritte_velocita"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="- - -"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profilo_vel"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:paddingTop="16dp"
            android:paddingLeft="16dp"
            android:paddingBottom="5dp"/>
    </LinearLayout>

</LinearLayout>
